--- a/index.html
+++ b/index.html
@@ -11,7 +11,107 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand ms-sm-5" href="#">Intercity Carpooling</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                </ul>
+                <div class="d-sm-flex me-5">
+                    <a href="" class="btn btn-secondary me-2">Sign Up</a>
+                    <a href="" class="btn btn-secondary">Sign In</a>
+                    </form>
+                </div>
+            </div>
+    </nav>
 
+    <header class="jumbotron p-5 bg-secondary text-white">
+        <h1> Intercity Carpooling Service</h1>
+    </header>
+
+    <main class="container">
+        <section class="mt-5">
+            <h2 class="">Sign Up,</h2>
+            <form action="" method="post">
+                <div class="mb-3 col-sm-6 m-auto mt-5 ">
+                    <div class="row">
+                        <div class="col">
+                            <label for="username" class="form-label ">Name</label>
+                            <input type="text" class="form-control" placeholder="Enter Name" aria-label="Name"
+                                name="username">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="mb-3 col-sm-6 m-auto">
+                    <label for="email" class="form-label ">Email</label>
+                    <input type="email" class="form-control" placeholder="Enter Email" name="email">
+                </div>
+                <div class="mb-3 col-sm-6 m-auto">
+                    <div class="row">
+                        <div class="col">
+                            <input type="password" class="form-control" placeholder="Enter Password"
+                                aria-label="Password" name="password">
+                        </div>
+                        <div class="col">
+                            <input type="password" class="form-control" placeholder="Confirm Password"
+                                aria-label="Password" name="confrm_password">
+                        </div>
+                    </div>
+                </div>
+                <div class="mt-5 col-sm-6 m-auto">
+                    <div class="form-check">
+                        <input class="form-check-input secondary" type="radio" name="role_user" id="flexRadioDefault1">
+                        <label class="form-check-label" for="flexRadioDefault1">
+                            Sign Up as <strong>User</strong>
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="role_driver" id="flexRadioDefault2">
+                        <label class="form-check-label" for="flexRadioDefault2">
+                            Sign Up as <strong>Driver</strong>
+                        </label>
+                    </div>
+                </div>
+                <div class="col-sm-6 m-auto">
+                    <div class="text-center ">
+                        <button id="submit" type="button " class="btn btn-secondary btn-md mt-5 " onclick="">Sign
+                            Up</button>
+                    </div>
+                </div>
+            </form>
+        </section>
+        <section class="mt-5">
+            <h2 class="">Sign In,</h2>
+            <form action="" method="post">
+                <div class="mb-3 col-sm-6 m-auto">
+                    <label for="email" class="form-label ">Email</label>
+                    <input type="email" class="form-control" placeholder="Enter Email" name="email">
+                </div>
+                <div class="mb-3 col-sm-6 m-auto">
+                    <div class="row">
+                        <div class="col">
+                            <label for="password" class="form-label">Password</label>
+                            <input type="password" class="form-control" placeholder="Enter Password"
+                                aria-label="Password" name="password">
+                        </div>
+                    </div>
+                    <div class="col-sm-6 m-auto">
+                        <div class="text-center ">
+                            <button id="submit" type="button " class="btn btn-secondary btn-md mt-5 " onclick="">Sign
+                                Up</button>
+                        </div>
+                    </div>
+            </form>
+        </section>
+    </main>
+
+    <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 
 </html>
