--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
                             <label for="username" class="form-label ">Name</label>
                             <input type="text" class="form-control" placeholder="Enter Name" aria-label="Name" name="username">
                         </div>
+                        <div class="col">
+                            <label for="number" class="form-label">Contact No.</label>
+                            <input type="number" class="form-control" placeholder="Enter Contact Number" name="number">
+                        </div>
                     </div>
                 </div>
 
