--- a/user-interface.html
+++ b/user-interface.html
@@ -73,7 +73,7 @@
                               </select>
                         </div>
                         <div class="p-1 col-sm-4">
-                            <input type="date" class="form-control " name="from_date" id="date-from">
+                            <input type="date" class="form-control" name="date" id="date">
                         </div>
                     </div>
                     <div class="text-center ">
