--- a/edit-user-profile.html
+++ b/edit-user-profile.html
@@ -15,7 +15,9 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand ms-sm-5" href="#">Intercity Carpooling</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -26,6 +28,7 @@
                     </form>
                 </div>
             </div>
+        </div>
     </nav>
 
     <header class="jumbotron p-5 bg-secondary text-white">
@@ -39,14 +42,16 @@
                 <div class="mb-3 col-sm-6 m-auto">
                     <div class="row">
                         <div class="col-7 ">
-                            <img src="picture.jpg" class="img-fluid rounded-circle border border-5 border-secondary" alt="Profile Image" style="max-width: 200px;">
+                            <img src="picture.jpg" class="img-fluid rounded-circle border border-5 border-secondary"
+                                alt="Profile Image" style="max-width: 200px;">
                         </div>
                         <div class="col-5 align-self-center">
                             <button class="btn btn-secondary">Add / Change Picture</button>
                             <form action="" method="">
                                 <input class="form-control mb-1" type="file" id="formFile" style="display: none;">
-                            <button type="submit mt-1" class="btn btn-sm btn-secondary" style="display: none;">Submit</button>
-                            </form> 
+                                <button type="submit mt-1" class="btn btn-sm btn-secondary"
+                                    style="display: none;">Submit</button>
+                            </form>
                         </div>
                     </div>
                 </div>
@@ -54,7 +59,8 @@
                     <div class="row">
                         <div class="col">
                             <label for="username" class="form-label ">Name</label>
-                            <input type="text" class="form-control" placeholder="Enter Name" aria-label="Name" name="username">
+                            <input type="text" class="form-control" placeholder="Enter Name" aria-label="Name"
+                                name="username">
                         </div>
                         <div class="col">
                             <label for="number" class="form-label">Contact No.</label>
@@ -70,16 +76,19 @@
                 <div class="mb-3 col-sm-6 m-auto">
                     <div class="row">
                         <div class="col">
-                            <input type="password" class="form-control" placeholder="Enter Password" aria-label="Password" name="password">
+                            <input type="password" class="form-control" placeholder="Enter Password"
+                                aria-label="Password" name="password">
                         </div>
                         <div class="col">
-                            <input type="password" class="form-control" placeholder="Confirm Password" aria-label="Password" name="confrm_password">
+                            <input type="password" class="form-control" placeholder="Confirm Password"
+                                aria-label="Password" name="confrm_password">
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-6 m-auto">
                     <div class="text-center ">
-                        <button id="submit" type="button " class="btn btn-secondary btn-md mt-5 " onclick="">Submit</button>
+                        <button id="submit" type="button " class="btn btn-secondary btn-md mt-5 "
+                            onclick="">Submit</button>
                     </div>
                 </div>
             </form>
