--- a/driver-interface.html
+++ b/driver-interface.html
@@ -14,9 +14,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand ms-sm-5" href="#">Intercity Carpooling</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -40,8 +38,7 @@
                     <div class="col-sm-6">
                         <div class="row">
                             <div class="col-6 col-md-4">
-                                <img src="picture.jpg" class="img-fluid rounded-circle border border-5 border-secondary"
-                                    alt="Profile Image">
+                                <img src="picture.jpg" class="img-fluid rounded-circle border border-5 border-secondary" alt="Profile Image">
                             </div>
                             <div class="col-6 col-md-8 align-self-center">
                                 <h3>Username <i class="bi bi-person-lines-fill"></i></h3>
@@ -98,8 +95,7 @@
                                     </div>
                                 </div>
                                 <div class="text-center ">
-                                    <button id="submit" type="button " class="btn btn-secondary btn-md mt-5 "
-                                        onclick="">Create Event</button>
+                                    <button id="submit" type="button " class="btn btn-secondary btn-md mt-5 " onclick="">Create Event</button>
                                 </div>
                             </div>
                         </form>
