--- a/driver-profile.html
+++ b/driver-profile.html
@@ -14,9 +14,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand ms-sm-5" href="#">Intercity Carpooling</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -40,8 +38,7 @@
                     <div class="col-sm-6">
                         <div class="row">
                             <div class="col-6 col-md-4">
-                                <img src="picture.jpg" class="img-fluid rounded-circle border border-5 border-secondary"
-                                    alt="Profile Image">
+                                <img src="picture.jpg" class="img-fluid rounded-circle border border-5 border-secondary" alt="Profile Image">
                             </div>
                             <div class="col-6 col-md-8 align-self-center">
                                 <h3>Username <i class="bi bi-person-lines-fill"></i></h3>
@@ -56,28 +53,28 @@
 
                 <div class="row mt-5">
                     <h3>Driver Details</h2>
-                    <div class="col-sm-6 mt-5 align-self-center">
-                        <h5>Car Type : Business Class</h5>
-                        <div class="row mt-3">
-                            <div class="col-6">
-                                <p>Car Name : <b>Honda City</b></p>
-                            </div>
-                            <div class="col-6">
-                                <p>Reg Number : <b>PS-763</b></p>
-                            </div>
-                            <div class="col-6">
-                                <p>Car Color : <b>White</b></p>
-                            </div>
-                            <div class="col-6">
-                                <p>Seats Available : <b>04</b></p>
+                        <div class="col-sm-6 mt-5 align-self-center">
+                            <h5>Car Type : Business Class</h5>
+                            <div class="row mt-3">
+                                <div class="col-6">
+                                    <p>Car Name : <b>Honda City</b></p>
+                                </div>
+                                <div class="col-6">
+                                    <p>Reg Number : <b>PS-763</b></p>
+                                </div>
+                                <div class="col-6">
+                                    <p>Car Color : <b>White</b></p>
+                                </div>
+                                <div class="col-6">
+                                    <p>Seats Available : <b>04</b></p>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-sm-6">
-                        <div class="">
-                            <img src="car.jfif" class="img-fluid img-thumbnail" alt="Driver Car">
+                        <div class="col-sm-6">
+                            <div class="">
+                                <img src="car.jpg" class="img-fluid img-thumbnail" alt="Driver Car">
+                            </div>
                         </div>
-                    </div>
                 </div>
             </div>
         </section>
