--- a/driver-profile.html
+++ b/driver-profile.html
@@ -33,7 +33,7 @@
 
     <main class="container">
         <section class="mt-5">
-            <div class="col-sm-8 m-auto">
+            <div class="col-lg-8 m-auto">
                 <div class="row">
                     <div class="col-sm-6">
                         <div class="row">
