--- a/index.html
+++ b/index.html
@@ -13,24 +13,20 @@
 </head>
 
 <body>
-    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
         <div class="container-fluid">
             <a class="navbar-brand ms-sm-5" href="#">
                 <h2 class="text-success">Intercity Carpooling</h2>
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 </ul>
                 <div class=" me-5">
-                    <a href="" class="text-success text-decoration-none me-2" data-bs-toggle="modal"
-                        data-bs-target="#exampleModalToggle2">Sign Up</a>
-                    <a href="" class="text-success text-decoration-none" data-bs-toggle="modal"
-                        data-bs-target="#exampleModalToggle">Sign In</a>
+                    <a href="" class="text-success text-decoration-none me-2" data-bs-toggle="modal" data-bs-target="#exampleModalToggle2">Sign Up</a>
+                    <a href="" class="text-success text-decoration-none" data-bs-toggle="modal" data-bs-target="#exampleModalToggle">Sign In</a>
                 </div>
             </div>
     </nav>
@@ -65,8 +61,7 @@
     </div>
 
 
-    <div class="modal fade" id="exampleModalToggle" aria-hidden="true" aria-labelledby="exampleModalToggleLabel"
-        tabindex="-1">
+    <div class="modal fade" id="exampleModalToggle" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
@@ -85,8 +80,7 @@
                                 <div class="row">
                                     <div class="col">
                                         <label for="password" class="form-label">Password</label>
-                                        <input type="password" class="form-control" placeholder="Enter Password"
-                                            aria-label="Password" name="password">
+                                        <input type="password" class="form-control" placeholder="Enter Password" aria-label="Password" name="password">
                                     </div>
                                 </div>
                                 <div class="col-sm-6 m-auto">
@@ -99,8 +93,7 @@
                             </div>
                         </form>
                         <div class="mt-5">
-                            <a href="" class="text-success" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal"
-                                data-bs-dismiss="modal">
+                            <a href="" class="text-success" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal" data-bs-dismiss="modal">
                                 <p>Don't have an account ? <br> Sign Up Here Easily !</p>
                             </a>
                         </div>
@@ -112,8 +105,7 @@
             </div>
         </div>
     </div>
-    <div class="modal fade" id="exampleModalToggle2" aria-hidden="true" aria-labelledby="exampleModalToggleLabel2"
-        tabindex="-1">
+    <div class="modal fade" id="exampleModalToggle2" aria-hidden="true" aria-labelledby="exampleModalToggleLabel2" tabindex="-1">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
@@ -128,13 +120,11 @@
                                 <div class="row">
                                     <div class="col">
                                         <label for="username" class="form-label ">Name</label>
-                                        <input type="text" class="form-control" placeholder="Enter Name"
-                                            aria-label="Name" name="username">
+                                        <input type="text" class="form-control" placeholder="Enter Name" aria-label="Name" name="username">
                                     </div>
                                     <div class="col">
                                         <label for="number" class="form-label">Contact No.</label>
-                                        <input type="tel" class="form-control" placeholder="Enter Contact Number"
-                                            name="number">
+                                        <input type="tel" class="form-control" placeholder="Enter Contact Number" name="number">
                                     </div>
                                 </div>
                             </div>
@@ -145,12 +135,10 @@
                             <div class="mb-3 col-sm-10 m-auto">
                                 <div class="row">
                                     <div class="col">
-                                        <input type="password" class="form-control" placeholder="Enter Password"
-                                            aria-label="Password" name="password">
+                                        <input type="password" class="form-control" placeholder="Enter Password" aria-label="Password" name="password">
                                     </div>
                                     <div class="col">
-                                        <input type="password" class="form-control" placeholder="Confirm Password"
-                                            aria-label="Password" name="confrm_password">
+                                        <input type="password" class="form-control" placeholder="Confirm Password" aria-label="Password" name="confrm_password">
                                     </div>
                                 </div>
                             </div>
@@ -162,8 +150,7 @@
                                     </label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="role" id="flexRadioDefault2"
-                                        checked>
+                                    <input class="form-check-input" type="radio" name="role" id="flexRadioDefault2" checked>
                                     <label class="form-check-label" for="flexRadioDefault2">
                                         Sign up as <b> Driver</b>
                                     </label>
@@ -213,8 +200,7 @@
                         </div>
                     </div>
                     <div class="text-center ">
-                        <button id="submit" type="button " class="btn btn-outline-success btn-md mt-5 "
-                            onclick="">Search Event</button>
+                        <button id="submit" type="button " class="btn btn-outline-success btn-md mt-5 " onclick="">Search Event</button>
                     </div>
                 </div>
             </form>
@@ -257,8 +243,7 @@
                             500
                         </td>
                         <td>
-                            <button class="btn btn-sm btn-success" data-bs-toggle="modal"
-                                data-bs-target="#exampleModalToggle">More Info</button>
+                            <button class="btn btn-sm btn-success" data-bs-toggle="modal" data-bs-target="#exampleModalToggle">More Info</button>
                         </td>
                     </tbody>
                 </table>
