--- a/user-responses.html
+++ b/user-responses.html
@@ -31,7 +31,7 @@
     </nav>
 
     <header class="jumbotron p-5 bg-light text-white mt-5">
-        <h4 class="text-success ms-5 mt-2">Driver Interface Profile</h4>
+        <h4 class="text-success ms-5 mt-2"> User Interface Responses </h4>
     </header>
 
     <div class="pad px-2">
@@ -55,32 +55,33 @@
                     </div>
                 </section>
                 <section class="mt-5 mb-5">
-                    <div class="row">
-                        <h3>Driver Details</h2>
-                            <div class="col-sm-6 mt-5 align-self-center">
-                                <h5>Car Type : Business Class</h5>
-                                <div class="row mt-3">
-                                    <div class="col-6">
-                                        <p>Car Name : <b>Honda City</b></p>
-                                    </div>
-                                    <div class="col-6">
-                                        <p>Reg Number : <b>PS-763</b></p>
-                                    </div>
-                                    <div class="col-6">
-                                        <p>Car Color : <b>White</b></p>
-                                    </div>
-                                    <div class="col-6">
-                                        <p>Seats Available : <b>04</b></p>
-                                    </div>
+                    <h2>Responses</h2>
+                    <div class="row mt-5">
+                        <div class="col-12">
+                            <h5>From : Driver Name</h5>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit velit dolorum odio, eius ullam facilis optio, iure delectus tenetur soluta provident rem incidunt, sit vitae quae? Sunt, placeat beatae dignissimos modi officiis
+                                et eaque architecto, officia libero aperiam adipisci enim.</p>
+                            <div class="row">
+                                <div class="col-6 text-black-50">
+                                    <p>Date: | Time: </p>
+                                </div>
+                                <div class="col-6">
+                                    <button class="btn btn-sm btn-outline-danger">Delete</button>
+                                    <button id="reply-btn" class="btn btn-sm btn-outline-success">Reply</button>
                                 </div>
                             </div>
-                            <div class="col-sm-6">
-                                <div class="">
-                                    <img src="car.jpg" class="img-fluid img-thumbnail" alt="Driver Car">
+                        </div>
+                        <div class="col">
+                            <form action="" method="" class="form-floating display" id="reply-form">
+                                <textarea id="reply" name="reply" class="form-control"></textarea>
+                                <label for="reply" class="form-label">Reply</label>
+                                <div class="mt-3 m-auto">
+                                    <button type="submit" class="btn btn-sm btn-success" id="reply-send">Send</button>
                                 </div>
-                            </div>
+                            </form>
+                            <p class="text-success display" id="sent"><i class="bi bi-check"></i> Sent !</p>
+                        </div>
                     </div>
-
                 </section>
             </div>
         </main>
@@ -88,7 +89,20 @@
 
 
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="./node_modules/jquery/dist/jquery.min.js"></script>
+    <script>
+        $("#reply-btn").click(function() {
+            if ($("#reply-form").hasClass("display"))
+                $("#reply-form").removeClass("display")
+        })
 
+        $("#reply-send").click(function() {
+            $("#reply-form").addClass("display")
+            if ($("#sent").hasClass("display")) {
+                $("#sent").removeClass("display")
+            }
+        })
+    </script>
 </body>
 
 </html>
